# egresslens

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-build.sh  docker-teardown.sh  test-docker.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: README.md  config.yaml  egresslens.db  requirements.txt  test_aggregates.py  test_enrichment.py  test_policy.py  test_upload_enrichment.py
backend/app/: __init__.py  config.py  database.py  enrichment.py  main.py  models.py  policy.py  schemas.py
cli/: README.md  pyproject.toml  requirements.txt  test_metadata.py  test_run_app.py  test_strace_integration.py  test_strace_parser.py
cli/egresslens/: __init__.py  __main__.py  docker_runner.py  main.py  metadata.py  run_app.py  run_app_command.py  strace_parser.py  watch.py
docs/: demo.md  getting-started.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
frontend/public/: sample-report.jsonl
frontend/src/: App.tsx  api.ts
frontend/src/components/: FlagsPanel.tsx  KPICards.tsx  PolicyVerdict.tsx  RunDetails.tsx  TimelineChart.tsx  TopDestinations.tsx
frontend/src/lib/: ipLookup.ts  portInfo.ts
frontend/src/pages/: ReportPage.tsx  UploadPage.tsx
frontend/tests/: demo-recording.spec.ts
sample_app/: README.md  __init__.py  app.py  requirements.txt
scripts/: demo_capture.sh
